# Python-Cplus-Rpc

./: .gitignore  CMakeLists.txt  README.md
cplus/inc/: cplus_server.h  rpc_client.h
cplus/src/: cplus_server.cpp  rpc_client.cpp
python/src/: rpc_server.py
test/: client.cpp  client.py  server.cpp  test_inproc.py
